--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
     <parent>
         <groupId>com.yanll</groupId>
-        <artifactId>dependencies-bom</artifactId>
+        <artifactId>frameworks</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../../dependencies-bom/pom.xml</relativePath>
+        <relativePath>../frameworks/pom.xml</relativePath>
     </parent>
 
     <dependencies>
